OSS Presto OTel changes Refactor phase 7