@@ -31,7 +31,8 @@ import com.facebook.presto.server.SessionContext;
 import com.facebook.presto.spi.PrestoException;
 import com.facebook.presto.spi.QueryId;
 import com.facebook.presto.sql.parser.SqlParserOptions;
-import com.facebook.presto.telemetry.TelemetryManager;
+import com.facebook.presto.telemetry.OpenTelemetryTracingManager;
+import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Ordering;
 import com.google.common.util.concurrent.ListenableFuture;
@@ -532,8 +533,8 @@ public class QueuedStatementResource
             synchronized (this) {
                 if (querySubmissionFuture == null) {
                     //start tracing with root span for POST /v1/statement endpoint
-                    TracingSpan rootSpan = TelemetryManager.getRootSpan();
-                    TracingSpan querySpan = TelemetryManager.getSpan(rootSpan, TracingEnum.QUERY.getName(), Map.of("QUERY_ID", queryId.toString()));
+                    TracingSpan rootSpan = OpenTelemetryTracingManager.getRootSpan();
+                    TracingSpan querySpan = OpenTelemetryTracingManager.getSpan(rootSpan, TracingEnum.QUERY.getName(), ImmutableMap.of("QUERY_ID", queryId.toString()));
 
                     //propagate root and query spans through session
                     querySubmissionFuture = dispatchManager.createQuery(queryId, querySpan, rootSpan, slug, retryCount, sessionContext, query);
